test/conformance/chainsaw/cel-pol/mpol/namespaced-isolation/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nmpol-test-a
---
apiVersion: v1
kind: Namespace
metadata:
  name: nmpol-test-b
