test/conformance/chainsaw/cel-pol/mpol/namespaced-isolation/pod-ns-a.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: nmpol-test-a
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
