test/conformance/chainsaw/cel-pol/mpol/namespaced-isolation/pod-ns-b.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: nmpol-test-b
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
