test/conformance/chainsaw/cel-pol/mpol/namespaced-isolation/policy-ns-a.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: NamespacedMutatingPolicy
metadata:
  name: add-label
  namespace: nmpol-test-a
spec:
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE"]
      resources: ["pods"]
  mutations:
  - patchType: ApplyConfiguration
    applyConfiguration:
      expression: |
        Object{
          metadata: Object.metadata{
            labels: {
              "mutated": "true",
              "policy-ns": "nmpol-test-a"
            }
          }
        }
