test/conformance/chainsaw/cel-pol/mpol/namespaced-isolation/pod-ns-b-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: nmpol-test-b
  # This pod should NOT have the mutated label since the policy is in ns-a
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
